# team-balancer

./: .gitignore  README.md
.github/workflows/: deploy-backend.yml  deploy-frontend  deploy-frontend.yml
backend/: README.md  app.py  balance_logic.py  ddragon.py  lambda_function.py  logger.py  main.py  pyproject.toml  riot_api.py  summoner_storage.py
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: DevModal.tsx  http-provider.tsx  theme-toggle.tsx
frontend/src/components/layouts/: root.tsx
frontend/src/components/ui/: card.tsx  fireworks.tsx  randomness-slider.tsx
frontend/src/features/team-builder/: SummonerRow.tsx  SummonerStorage.tsx  TeamResults.tsx  index.tsx  types.ts
frontend/src/hooks/: useDevModeSequence.ts
