[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Momonga"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
requests = "^2.32.3"
aiohttp = "^3.11.11"
python-dotenv = "^1.0.1"
pulp = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
